<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cuisine_backgroud">

    <TextView
        android:id="@+id/login_Logo"
        android:layout_width="409dp"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="Got Apples?"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/login_Email_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Logo"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/login_Password_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="123"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Email_Input"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/login_Login_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        app:autoSizeTextType="uniform"
        app:backgroundTint="#403535"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Password_Input"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/login_register_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Register"
        app:autoSizeTextType="uniform"
        app:backgroundTint="#403535"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/login_Login_Button"
        app:layout_constraintTop_toBottomOf="@+id/login_Password_Input"
        app:layout_constraintVertical_bias="0.133" />

</androidx.constraintlayout.widget.ConstraintLayout>